add: add `pydantic` and `pydantic-settings` as deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,7 @@ name = "its-you"
 version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
+]
