--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,8 @@ dependencies = [
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
 ]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.17.0",
+]
