--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,9 @@ dependencies = [
 [dependency-groups]
 dev = [
     "mypy>=1.17.0",
+    "pytest>=8.4.1",
+    "pytest-asyncio>=1.1.0",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
     "ruff>=0.12.5",
 ]
