--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "injector>=0.22.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
 ]
