--- a/.github/workflows/template-build-and-push.yml
+++ b/.github/workflows/template-build-and-push.yml
@@ -27,6 +27,9 @@ jobs:
       contents: read
       packages: write
 
+    outputs:
+      image_tag: ${{ steps.meta.outputs.tags }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
