--- a/.github/workflows/template-python-ci.yml
+++ b/.github/workflows/template-python-ci.yml
@@ -1,11 +1,19 @@
+---
 name: Python CI [template]
 
 "on":
   workflow_call:
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+    inputs:
+      registry:
+        description: 'The container registry to pull from'
+        required: false
+        type: string
+        default: 'ghcr.io'
+      image_name:
+        description: 'The name of the docker image'
+        required: false
+        type: string
+        default: ${{ github.repository }}
 
 jobs:
   python-ci:
@@ -18,7 +26,7 @@ jobs:
       - name: Log in to the GitHub Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ${{ inputs.registry }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -26,12 +34,12 @@ jobs:
         id: image
         run: |
           # Automatically generate the tag from the Git commit SHA.
-          # github.sha provides the full SHA-1 hash of the commit that triggered the workflow.
           COMMIT_SHA=${{ github.sha }}
           IMAGE_TAG="${COMMIT_SHA}-debug"
-          
-          FULL_IMAGE_NAME="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${IMAGE_TAG}"
-          
+
+          # Use inputs to construct the full image name
+          FULL_IMAGE_NAME="${{ inputs.registry }}/${{ inputs.image_name }}:${IMAGE_TAG}"
+
           # Set the full image name as an environment variable for subsequent steps
           echo "IMAGE_TO_TEST=${FULL_IMAGE_NAME}" >> $GITHUB_ENV
           echo "Generated image to test: ${FULL_IMAGE_NAME}"
