--- a/.github/workflows/template-python-ci.yml
+++ b/.github/workflows/template-python-ci.yml
@@ -19,6 +19,10 @@ jobs:
   python-ci:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: read
+      packages: read
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
