--- a/.github/workflows/template-build-and-push.yml
+++ b/.github/workflows/template-build-and-push.yml
@@ -61,9 +61,10 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ inputs.registry }}/${{ inputs.image_name }}
+          flavor: |
+            latest=false
           tags: |
-            type=sha,format=long,prefix='',enable=${{ inputs.is_release }}
-            type=sha,format=long,prefix='',suffix=-developer,enable=${{ !inputs.is_release }}
+            type=sha,format=long,prefix='',suffix=${{ !inputs.is_release && '-developer' || '' }}
 
       - name: Build and push Docker image
         id: build-and-push
