fix: fix bug(s) in `template-*.yml` (6)

--- a/.github/workflows/template-build-and-push.yml
+++ b/.github/workflows/template-build-and-push.yml
@@ -72,7 +72,7 @@ jobs:
           file: ./docker/python/Dockerfile
           push: true
           target: ${{ inputs.is_release && 'runner' || 'developer' }}
-          tags: ${{ inputs.registry }}/${{ inputs.image_name }}:${{ steps.meta.outputs.version }}${{ !inputs.is_release && '-developer' || '' }}
+          tags: ${{ inputs.registry }}/${{ inputs.image_name }}:${{ steps.meta.outputs.version }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
