--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -12,10 +12,12 @@ env:
 jobs:
   build:
     name: Build Debug Image
+
     uses: ./.github/workflows/template-build-and-push.yml
     with:
       is_release: false
       tags: ''
+      image_name: ${{ github.repository }}
 
     permissions:
       contents: read
@@ -23,7 +25,10 @@ jobs:
 
   lint:
     name: Lint inside Container
+
     uses: ./.github/workflows/template-python-ci.yml
+    with:
+      image_name: ${{ github.repository }}
 
     needs: build
 
