--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -56,7 +56,13 @@ ENV PATH="${VENV_DIR}/bin:$PATH"
 
 WORKDIR ${APP_DIR}
 
-RUN uv sync --dev
+# Install dev dependencies
+RUN --mount=type=cache,target=/root/.cache/uv \
+    --mount=type=bind,source=uv.lock,target=uv.lock \
+    --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
+    uv sync --frozen --no-install-project --dev --no-editable
+
+CMD ["python", "main.py"]
 
 # =================================================================
 FROM gcr.io/distroless/base-debian12:nonroot AS runner
