Revert "fix: use `uv sunc --locked` instead of `--frozen` for `--dev`"
This reverts commit 9361bde9c4c817004ed6b88aa28eccdd61ac708c.

--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -60,7 +60,7 @@ WORKDIR ${APP_DIR}
 RUN --mount=type=cache,target=/tmp/.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
-    uv sync --locked --dev
+    uv sync --frozen --dev
 
 # =================================================================
 FROM gcr.io/distroless/base-debian12:nonroot AS runner
